tests/ui/contracts/error/zero-contracts.rs
use hyper_tracing_attributes::contracts;

#[contracts]
fn f() {}

fn main() {}
