tests/ui/contracts/error/zero-contracts.stderr
warning: unused import: `abort_call_site`
 --> src/server_send/analyze.rs
  |
  | use proc_macro_error::{abort, abort_call_site};
  |                               ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `FromMeta`
 --> src/server_send/parsed.rs
  |
  | use darling::{FromMeta};
  |               ^^^^^^^^

warning: field is never read: `level`
  --> src/server_send/parsed.rs
   |
   |     level: Option<String>,
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: field is never read: `name`
  --> src/server_send/parsed.rs
   |
   |     name: Option<String>,
   |     ^^^^^^^^^^^^^^^^^^^^

warning: field is never read: `skip`
  --> src/server_send/parsed.rs
   |
   |     skip: Option<String>,
   |     ^^^^^^^^^^^^^^^^^^^^

warning: field is never read: `fields`
  --> src/server_send/parsed.rs
   |
   |     fields: Option<String>,
   |     ^^^^^^^^^^^^^^^^^^^^^^

warning: associated function is never used: `skip_params`
  --> src/server_send/parsed.rs
   |
   |     fn skip_params(&self) -> Vec<String> {
   |        ^^^^^^^^^^^

warning: associated function is never used: `fields_params`
  --> src/server_send/parsed.rs
   |
   |     fn fields_params(&self) -> Vec<String> {
   |        ^^^^^^^^^^^^^

error: no contracts were specified

         = help: add a `#[precondition]`

 --> tests/ui/contracts/error/zero-contracts.rs:3:1
  |
3 | #[contracts]
  | ^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `contracts` (in Nightly builds, run with -Z macro-backtrace for more info)
